Bug 1667864 - Fold MUnbox to constant doubles when possible. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D91747